# app

./: ALGO.md  Cargo.toml  EXTENSION.md  LICENSE  README.md  alias_new  differences_topalias.md  et --hard <previous_commit_hash>  fixes.md  install.sh  store.aliases  test  tp
.github/workflows/: release.yml
src/: main.rs  shell.rs
src/cli/: arg_handler.rs  cli_data.rs  mod.rs
src/database/: database_ops.rs  database_structs.rs  mod.rs  persistence.rs
src/historyfile/: mod.rs  monitoring_history.rs
src/ops/: add_alias.rs  alias_ops.rs  alias_suggestions.rs  delete_suggestion.rs  get_suggestions.rs  insert_command.rs  mod.rs  remove_alias.rs
src/tui/: app.rs  event_handler.rs  mod.rs  terminal.rs
src/tui/ui/: input_view.rs  main_view.rs  mod.rs  popup.rs
