[package]
name = "alman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.29"
colored = "2.0"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
